--- a/style.css
+++ b/style.css
@@ -1,13 +1,76 @@
+/* body{
+    background-image: url("pexels-pixabay-326311.jpg");
+} */
+.container{
+    margin-top:10vh !important;
+    margin-bottom:10vh !important;
+    padding-top: 20vh;
+    padding-bottom: 20vh;
+    border-radius: 20%;
+    border: solid brown 25px;
+    color:white;
+    background-color: #00b846;
+
+}
 .hide{
     display: none;
 }
 
 .player{
     display: inline-block;
+    color:black;
+    font-weight: 700;
     width: 200px;
-    height: 600px;
+    height: 200px;
     vertical-align: middle;
     text-align: center;
+    margin-bottom:10vh !important;
     font-size: 2em;
+    background-color: #00b846;
+    /* border: 1px solid black; */
+}
+
+.card{
+
+    display: block;
+    margin:auto;
+    padding:7px;
+    color: black;
+    height: 110px;
+    width: 80px;
+    margin-top: 10px;
+    background-color: whitesmoke;
     border: 1px solid black;
+    border-radius: 5px;
+    box-shadow: 5px 10px #333;
+}
+
+.big{
+
+    font-size:1.5em;
+    text-align: center;
+    line-height: 20px;
+    margin-top: 20px;
+    display: block;
+}
+.red{
+    color:red;
+}
+.tinyTopLeft{
+    font-size: 0.6em;
+    text-align: left;
+    /* vertical-align: top; */
+    line-height: 15px;
+    display: block;
+}
+.tinyBotRight{
+    font-size: 0.6em;
+    text-align: right;
+    margin-top:20px;
+    display: block;
+}
+
+.stats{
+    margin-top: 25px;
+    font-size: 0.8em;
 }
